--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+        
         <dependency>
-            <groupId>org.xbill</groupId>
-            <artifactId>dns</artifactId>
-            <version>2.0.8</version>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
